# template-workspace

./: .gitignore  Cargo.toml  README.md  ad_dep.csv  committed.toml  ext_dependencies.csv  ext_deps.csv  justfile  regex_refs.md  rustfmt.toml  template.env  typos.toml
.cargo/: config.toml
.support/: _template.env  template.env
.support/cargo_generate_templates/_template__new_package/: Cargo.toml
.support/cargo_generate_templates/template__new_package/src/: lib.rs  support.rs
.support/templates/template__cli_bin/src/: main.rs
.support_data/: commit-msg
.support_data/cargo_generate_templates/template__cli_bin/: Cargo.toml
.support_data/cargo_generate_templates/template__new_package/: Cargo.toml  README.md
.support_data/cargo_generate_templates/template__new_package/src/: main.rs
.support_data/cargo_generate_templates/template__new_package/src/support/: error.rs  subscriber.rs
bin2/: Cargo.toml
bin2/src/: main.rs
bin_cli/: Cargo.toml
bin_cli/src/: error.rs  lib.rs  main.rs  support.rs  support_tracing.rs
bin_cli/src/support/: error.rs  subscriber.rs
bin_tbd/: Cargo.toml
bin_tbd/src/: error.rs  main.rs
cat_ergonomics/: README.md
cat_ergonomics/src/: iterator_methods.rs  main.rs  struct_derive.rs
cat_ergonomics/src/support/: error.rs
cli_bin/: Cargo.toml
cli_bin/data/: script1_level.csv
cli_bin/src/: main.rs
crates/bin_cli/: Cargo.toml
crates/bin_cli/src/: alt_main.md  main.rs  support.rs
crates/bin_cli/src/support/: error.rs  subscriber.rs
crates/bin_tbd/: Cargo.toml
crates/cat_ergonomics/: Cargo.toml
crates/cat_ergonomics/src/: builder_derive.rs  lib.rs  support.rs
crates/cat_ergonomics/src/support/: subscriber.rs
crates/lib_blocking/: Cargo.toml
crates/samples_conversion/: Cargo.toml
crates/samples_conversion/src/: main.rs
crates/samples_errors/: Cargo.toml
crates/samples_errors/src/: main.rs
crates/samples_itertools/: Cargo.toml
crates/samples_mutability/: Cargo.toml
crates/samples_mutability/src/: main.rs
crates/samples_ptr/src/: main.rs
crates/samples_regex/: Cargo.toml
crates/samples_tracing/: Cargo.toml
crates/samples_tracing/data/: some_file.md
crates/xp-drop/: Cargo.toml
crates/xp-drop/src/: main.rs
crates/xp-ratatui/: Cargo.toml
crates/xp-ratatui/src/: counter_app.rs  lib.rs  support.rs
crates/xp-ratatui/src/support/: error.rs
crates/xp-rayon/: Cargo.toml
crates/xp-rayon/src/: main.rs
crates/xp-serde/: Cargo.toml
crates/xp-serde/src/: main.rs
crates/xp-snapshot/: Cargo.toml  README.md
crates/xp-snapshot/src/: insta.rs  lib.rs  main.rs  support.rs
crates/xp-snapshot/src/support/: error.rs  subscriber.rs
crates/xp-tabled/: Cargo.toml  README.md
crates/xp-tabled/src/: main.rs  support.rs
crates/xp-tabled/src/support/: error.rs
crates/xp-template/: Cargo.toml
crates/xp-template/src/: error.rs  handlebars_ex.rs  main.rs
cscripts/: Cargo.toml
cscripts/src/: lib.rs
data/: workspace_level.csv
lib_blocking/: Cargo.toml
lib_blocking/src/: arithmetic.rs  func_repetition.rs  utility.rs
lib_blocking/tests/: integration_test.rs
libraire/: Cargo.toml
libraire/src/: arithmetic.rs  error.rs  func_repetition.rs  lib.rs  utility.rs
libraire/tests/: integration_test.rs
libraire_lib/: Cargo.toml
libraire_lib/src/: arithmetic.rs  error.rs  lib.rs
libraire_lib/tests/: integration_test.rs
samples_conversion/src/: main.rs
samples_errors/: Cargo.toml
samples_errors/src/: main.rs
samples_itertools/: Cargo.toml
samples_itertools/src/: main.rs
samples_mutability/: Cargo.toml
samples_mutability/src/: main.rs
samples_ptr/: Cargo.toml
samples_ptr/src/: main.rs
samples_regex/src/: main.rs
samples_sync/: Cargo.toml
samples_sync/src/: main.rs
samples_tracing/: Cargo.toml
samples_tracing/src/: main.rs
script1/: Cargo.toml
script1/src/: main.rs  support_tracing.rs
script2/: Cargo.toml
script2/src/: main.rs
support/: pre-commit  template.env
xp-bon/: Cargo.toml
xp-bon/src/: lib.rs
xp-drop/: Cargo.toml
xp-drop/src/: lib.rs  main.rs
xp-ratatui/: Cargo.toml  README.md
xp-ratatui/data/: script1_level.csv
xp-ratatui/src/: counter_app.rs  hello_world.rs  lib.rs  main.rs
xp-ratatui/src/support/: error.rs  subscriber.rs
xp-rayon/: Cargo.toml
xp-rayon/src/: main.rs
xp-serde/: Cargo.toml
xp-serde/src/: main.rs
xp-snapshot/: Cargo.toml
xp-snapshot/src/: expect.rs  main.rs
xp-snapshot/src/support/: error.rs  subscriber.rs
xp-tabled/: Cargo.toml
xp-tabled/src/: lib.rs  main.rs
xp-tabled/src/support/: error.rs  subscriber.rs
xp-template/: Cargo.toml
xp-template/src/: handlebars_ex.rs  liquid_ex.rs  main.rs  minijinja_ex.rs  support.rs
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs  types_manual.rs
