
# Settings for Rust Workspace
# [Cargo Manifest Configuration Reference](https://doc.rust-lang.org/stable/cargo/reference/manifest.html#the-lints-section)

[workspace]
members = [
    "lib_blocking",
    "bin_cli",
    "bin_tbd",
    "xp-drop",
    "xp-serde",
    "xp-template",
    "samples_tracing",
    "samples_sync",
    "samples_ptr",
    "samples_mutability",
    "samples_itertools",
    "samples_conversion",
    "samples_errors",
    "samples_regex",
    "xp-rayon",
    "xp-tabled",
    "xp-snapshot",
    "xp-ratatui",
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Ethan Skowronski-Lutz"]
description = "template workspace; explorative"
homepage = "https://github.com/ethanmsl/template-workspace"
documentation = "https://github.com/ethanmsl/template-workspace"
repository = "https://github.com/ethanmsl/template-workspace"
keywords = ["template", "workspace", "explorative"]
# publish = []
# license = ""
# license-file = ""

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
allow_attributes = "warn"

# for use with perf-analysis tools like `samply`
[profile.profiling]
inherits = "release"
debug = true

[workspace.dependencies]
## --Async--
futures = "0.3.31"
tokio = { version = "1.42.0", features = ["full", "tracing"] }

## --CLI--
clap = { version = "4.5.22", features = [
    "env",
    "derive",
    "string",
    "unicode",
    "wrap_help",
] }
clap-verbosity-flag = "3.0.1"
console = "0.15.8"
dialoguer = "0.11.0"
indicatif = "0.17.9"
owo-colors = "4.1.0"
ratatui = { version = "0.29.0", features = ["serde", "palette"] }
tabled = "0.17.0"
json_to_table = "0.9"

## --Diagnostics--
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "chrono",
    "time",
    "json",
    "env-filter",
    "tracing-log",
    "tracing-serde",
    "tracing",
    # "serde-json",
    "regex",
    "matchers",
    "once_cell",
    "local-time",
] }
tracing-appender = "0.2.3"
tracing-error = "0.2.1"
tracing-flame = "0.2.0"
tracing-timing = "0.6.0"
tracing-tree = { version = "0.4.0", features = ["time"] }

## --Env & Files--
csv = "1.3.1"
dotenvy = "0.15.7"
include_dir = "0.7.4"
secrecy = "0.10.3"
walkdir = "2.5.0"

## --General--
bon = "3.2.0"
derive_more = { version = "1.0.0", features = [
    "full",
    "error",
    "display",
    "deref",
    "from",
] }
indoc = "2.0.5"
itertools = "0.13.0"

## --Math--
chrono = { version = "0.4.38", features = ["serde"] }
rand = "0.8.5"

## --Networking--
reqwest = { version = "0.12.9", features = ["blocking", "json"] }

## --Parsing--
regex = { version = "1.11.1", features = ["logging"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

## --Performance--
dashmap = { version = "6.1.0", features = ["serde", "rayon", "arbitrary"] }
regex-automata = "0.4.9"
rayon = "1.10.0"
tinyvec = { version = "1.8.0", features = [
    "serde",
] } # safe array/small vec, but requires Default for elements

## --eXplore--

ndarray = { version = "0.16.1", features = [
    "rayon",
    "serde",
    "approx",
    "blas",
    "matrixmultiply-threading",
] }
nalgebra = "0.33.2"
backon = { version = "1", features = ["tokio-sleep"] }
minijinja = { version = "2", default-features = false }
strum = "0.26.3"
arbitrary = { version = "1.4.1", features = ["derive_arbitrary"] }
divan = "0.1.17"
criterion = "0.5.1"
expect-test = "1.5.0"
insta = { version = "1.41.1", ff = [
    "clap",
    "csv",
    "json",
    "redactions",
    "serde",
    "toml",
    "walkdir",
] }
rstest = "0.23.0"
time = { version = "0.3.37", features = [
    "rand",
    "quickcheck",
    "serde",
    "wasm-bindgen",
    "parsing",
    # "formating",
    "macros",
    "local-offset",
] }
hifitime = { version = "4.0.1", features = ["reqwest", "tabled"] }
url = { version = "2.5.4", features = ["serde"] }
statrs = { version = "0.18.0", features = ["nalgebra"] }
petgraph = { version = "0.6.5", features = [
    "rayon",
    "quickcheck",
    "serde",
    # "serde-1",
    "serde_derive",
] }
rustworkx-core = "0.15.1"
fixedbitset = { version = "0.5.7", fastures = ["serde"] }
rstar = { version = "0.12.2", features = ["serde"] }


# Dev-Dependencies
## --Property Sample Testing--
quickcheck = "1.0.3"

quickcheck_macros = "1.0.0"

## --Test Trace-Logging--
test-log = { version = "0.2.16", features = ["trace"] }

## --Snapshot Testing--## --Snapshot Testing--
