# Settings for Rust Workspace
# [Cargo Manifest Configuration Reference](https://doc.rust-lang.org/stable/cargo/reference/manifest.html#the-lints-section)

[workspace]
resolver = "3"
members = ["crates/*", "xtask"]

[workspace.package]
edition = "2024"
authors = ["Ethan Skowronski-Lutz"]
description = "template workspace; explorative"
homepage = "https://github.com/ethanmsl/template-workspace"
documentation = "https://github.com/ethanmsl/template-workspace"
repository = "https://github.com/ethanmsl/template-workspace"
keywords = ["template", "workspace", "explorative"]
# publish = []
# license = ""
# license-file = ""

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
allow_attributes = "warn"

# for use with perf-analysis tools like `samply`
[profile.profiling]
inherits = "release"
debug = true

[workspace.dependencies]
## --Async--
futures = "0.3.31"
tokio = { version = "1.42.0", features = ["full"] }
### - Networking -
reqwest = { version = "0.12.9", features = ["blocking", "json"] }

## --Diagnostics--
tracing = { version = "0.1.41", features = [] }
tracing-appender = "0.2.3"
tracing-error = "0.2.1"
tracing-flame = "0.2.0"
tracing-indicatif = "0.3.8"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-timing = "0.6.0"

## --Env & Files--
arboard = "3.4.1"
csv = "1.3.1"
dotenvy = "0.15.7"
include_dir = "0.7.4"
secrecy = "0.10.3"
walkdir = "2.5.0"

## --Ergonomics--
bon = "3.2.0"
derive_more = { version = "1.0.0", features = ["full"] }
indoc = "2.0.5"
itertools = "0.13.0"
nestify = "0.3.3"
strum = { version = "0.26.3", features = ["derive", "phf"] }

## --Interface--
### - CLI -
clap = { version = "4.5.22", features = [
    "env",
    "cargo",
    "derive",
    "string",
    "unicode",
    "wrap_help",
] }
clap-verbosity-flag = "3.0.1"
console = "0.15.8"
dialoguer = "0.11.0"
indicatif = "0.17.9"
owo-colors = "4.1.0"
tabled = "0.17.0"
json_to_table = "0.9"
# ### - egui -
# eframe = { version = "0.30", default-features = false, features = [
#     "default_fonts", # Embed the default egui fonts.
#     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
#     "persistence",   # Enable restoring app state when restarting the app.
#     "wayland",       # To support Linux (and CI)
# ] }
# egui = "0.30"
# egui = { version = "0.30.0", features = ["callstack", "document-features"] }
# egui_extras = { version = "0.30.0", features = [
#     "datepicker",
#     "document-features",
#     "serde",
#     "syntect",
# ] }
# egui_plot = { version = "0.30.0", features = ["document-features"] }
# egui_table = "0.2.0"
# egui_inbox = "0.7.0"

## --Math--
rand = "0.8.5"

## --Other--
jiff = { version = "0.1.16", features = ["js", "logging", "serde"] }
#                                           "tzdb-bundle-always" ^

## --Parsing--
regex = { version = "1.11.1", features = ["logging"] }
monostate = "0.1.13" # serde: constraining, zero-sized type
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

## --Performance--
dashmap = { version = "6.1.0", features = ["arbitrary", "rayon", "serde"] }
regex-automata = "0.4.9"
rayon = "1.10.0"
tinyvec = { version = "1.8.0", features = ["serde"] }

# Dev-Dependencies
## --Dev-Ergonomics--
pretty_assertions = "1.4.1"
## --Property Sample Testing--
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
## --Test Trace-Logging--
test-log = { version = "0.2.16", features = ["trace"] }

###########################################################################
## --eXplore--
###########################################################################
#
## -- explore soon --
rstest = "0.23.0"
divan = "0.1.17"
insta = { version = "1.41.1", ff = [
    "clap",
    "csv",
    "json",
    "redactions",
    "serde",
    "toml",
    "walkdir",
] }
# #
# ### X zero_copy
# yoke = "0.7.5"
# yoke-derive = "0.7.5"
# #
# ### X perf/bench
# arbitrary = { version = "1.4.1", features = ["derive_arbitrary"] }
# criterion = "0.5.1"
# #
# ### X calls
# ease-off = { version = "0.1.6", features = ["tokio"] }
# backon = { version = "1", features = ["tokio-sleep"] }
# url = { version = "2.5.4", features = ["serde"] }
# #
# ### X math
# ndarray = { version = "0.16.1", features = [
#     "rayon",
#     "serde",
#     "approx",
#     "blas",
#     "matrixmultiply-threading",
# ] }
# nalgebra = "0.33.2"
# statrs = { version = "0.18.0", features = ["nalgebra"] }
# petgraph = { version = "0.6.5", features = [
#     "rayon",
#     "quickcheck",
#     "serde",
#     # "serde-1",
#     "serde_derive",
# ] }
# rustworkx-core = "0.15.1"
# fixedbitset = { version = "0.5.7", fastures = ["serde"] }
# rstar = { version = "0.12.2", features = ["serde"] }
# #
# ### X time
# hifitime = { version = "4.0.1", features = ["reqwest", "tabled"] }
# #
# ### X other
# minijinja = { version = "2", default-features = false }
# phf = { version = "0.11.2", features = [
#     "macros",
#     "serde",
#     "uncased",
#     "unicase",
# ] }
# phf_codegen = "0.11.2"
# image = { version = "0.25.5", features = ["serde"] }
