[package]
name = "bin2"
version = "0.1.0"
edition = "2021"

[dependencies]
## --LOCAL--
libraire_lib = { path = "../libraire_lib" }
## --Trace-Logging--
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
## --Test Trace-Logging--
test-log = { workspace = true }
