[package]
name = "bin_tbd"
version = "0.1.0"
edition = "2021"

[dependencies]
## --LOCAL--
lib_blocking = { path = "../lib_blocking" }

## --Trace-Logging--
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


[dev-dependencies]
## --Test Trace-Logging--
test-log = { workspace = true }

[lints]
workspace = true
