cargo-features = ["edition2024"]

[package]
name = "bin_tbd"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
repository.workspace = true
# publish.workspace = true
# license.workspace = true
# license-file.workspace = true

[dependencies]
## --LOCAL--
lib_blocking = { path = "../lib_blocking" }

## --Trace-Logging--
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


[dev-dependencies]
## --Test Trace-Logging--
test-log = { workspace = true }

[lints]
workspace = true
