[package]
name = "lib_blocking"
version = "0.1.0"
edition = "2021"

[dependencies]
## --General--
derive_more = { workspace = true }

## --Trace-Logging--
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


[dev-dependencies]
## --Test Trace-Logging--
test-log = { workspace = true }

## --Property Sample Testing--
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }

[lints]
workspace = true
