cargo-features = ["edition2024"]

[package]
name = "lib_blocking"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
repository.workspace = true
# publish.workspace = true
# license.workspace = true
# license-file.workspace = true

[dependencies]
## --General--
derive_more = { workspace = true }

## --Trace-Logging--
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


[dev-dependencies]
## --Test Trace-Logging--
test-log = { workspace = true }

## --Property Sample Testing--
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }

[lints]
workspace = true
