cargo-features = ["edition2024"]

[package]
name = "xp-serde"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
repository.workspace = true
# publish.workspace = true
# license.workspace = true
# license-file.workspace = true

[dependencies]
## --LOCAL--
xp-drop = { path = "../xp-drop" }

## --General--
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

## --Logging--
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
