[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
owo-colors = { workspace = true }
