

[package]
name = "xp-drop"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "`drop` implementation"
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
repository.workspace = true
# publish.workspace = true
# license.workspace = true
# license-file.workspace = true

[dependencies]
## --Logging--
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
