[package]
name = "xp-ratatui"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
repository.workspace = true
# publish.workspace = true
# license.workspace = true
# license-file.workspace = true

[lints]
workspace = true

[dependencies]
################################33
## --CLI--
clap.workspace = true
clap-verbosity-flag.workspace = true
console.workspace = true
crossterm = { version = "0.28.1", features = ["serde"] }
dialoguer.workspace = true
indicatif.workspace = true
owo-colors.workspace = true
ratatui = { version = "0.29.0", features = ["serde", "palette"] }
tabled.workspace = true
json_to_table.workspace = true
## --Diagnostics--
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing-error.workspace = true
tracing-flame.workspace = true
tracing-timing.workspace = true
tracing-tree.workspace = true
## --Ergonomics--
derive_more.workspace = true
## --Files--
indoc.workspace = true
## --Math--
rand.workspace = true
## --Parsing--
regex.workspace = true



[dev-dependencies]
# Dev-Dependencies
pretty_assertions.workspace = true
## --Property Sample Testing--
quickcheck.workspace = true
quickcheck_macros.workspace = true
## --Test Trace-Logging--
test-log.workspace = true
