[package]
name = "xp-snapshot"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
repository.workspace = true
# publish.workspace = true
# license.workspace = true
# license-file.workspace = true

[lints]
workspace = true

[dependencies]
################################33
## --CLI--
clap.workspace = true
owo-colors.workspace = true
## --Diagnostics--
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing-error.workspace = true
## --Env & Files--
include_dir.workspace = true
## --General--
bon.workspace = true
derive_more.workspace = true
indoc.workspace = true
itertools.workspace = true
## --Math--
rand.workspace = true
rand_chacha = "0.3.0"
## --Parsing--
regex.workspace = true
##
divan.workspace = true
expect-test = "1.5.0"
insta.workspace = true

[dev-dependencies]
# Dev-Dependencies
## --Property Sample Testing--
quickcheck.workspace = true
quickcheck_macros.workspace = true
## --Test Trace-Logging--
test-log.workspace = true
## --Snapshot Testing--## --Snapshot Testing--
