[package]
name = "{{project-name}}"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
repository.workspace = true
# publish.workspace = true
# license.workspace = true
# license-file.workspace = true

[lints]
workspace = true

[dependencies]
## --CLI--
clap.workspace = true
dialoguer.workspace = true
owo-colors.workspace = true
indicatif.workspace = true
## --Diagnostics--
tracing.workspace = true
tracing-appender.workspace = true
tracing-error.workspace = true
tracing-flame.workspace = true
tracing-subscriber.workspace = true
tracing-timing.workspace = true
tracing-tree.workspace = true
## --General--
bon.workspace = true
derive_more.workspace = true
indoc.workspace = true
itertools.workspace = true
## --Math--
chrono.workspace = true
rand.workspace = true
## --Parsing--
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
# Dev-Dependencies
## --Property Sample Testing--
quickcheck.workspace = true
quickcheck_macros.workspace = true
## --Test Trace-Logging--
test-log.workspace = true
